--- a/heroes/nagraj.html
+++ b/heroes/nagraj.html
@@ -71,37 +71,19 @@
         </ul>
     </div>
 
-    <!-- Comics -->
-    <div class="comics-section">
-        <h2>Popular Comics</h2>
+<!-- Comics -->
+<div class="comics-section">
+    <h2>Popular Comics</h2>
 
-        <div class="comics-grid">
+    <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/nagraj1.jpg">
-                <span>Nagraj Ki Kahani</span>
-            </div>
+        <li><a href="#">Nagraj Ki Kahani</a></li>
+        <li><a href="#">Vishkanya Ka Pralay</a></li>
+        <li><a href="#">Bhayanak Nagraj</a></li>
+        <li><a href="#">Nagraj Aur Dushman</a></li>
 
-            <div class="comic-card">
-                <img src="../images/comics/nagraj2.jpg">
-                <span>Vishkanya Ka Pralay</span>
-            </div>
-
-            <div class="comic-card">
-                <img src="../images/comics/nagraj3.jpg">
-                <span>Bhayanak Nagraj</span>
-            </div>
-
-            <div class="comic-card">
-                <img src="../images/comics/nagraj4.jpg">
-                <span>Nagraj Aur Dushman</span>
-            </div>
-
-        </div>
-    </div>
-
+    </ol>
 </div>
-
 <footer class="footer">
     <div class="footer-container">
         <p>© 2026 ComicLibrary</p>
