--- a/heroes/inspector_steel.html
+++ b/heroes/inspector_steel.html
@@ -5,110 +5,105 @@
     <title>Inspector Steel | ComicLibrary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main CSS -->
+    <!-- Global CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Page Theme -->
+    <!-- Steel Theme -->
     <link rel="stylesheet" href="../css/inspector_steel.css">
 </head>
 <body>
 
-<!-- HEADER -->
+<!-- ========== HEADER ========== -->
 <header class="header">
-  <div class="logo">ComicLibrary</div>
+    <div class="logo">ComicLibrary</div>
 
-  <div class="header-right">
-    <div class="search-icon">🔍</div>
+    <div class="header-right">
+        <div class="search-icon">🔍</div>
 
-    <div class="menu" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
+        <div class="menu" id="menuBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </div>
 
-  <div class="dropdown" id="dropdownMenu">
-    <a href="../index.html">Home</a>
-    <a href="#">Trending</a>
-    <a href="#">Categories</a>
-    <a href="#">Contact</a>
-  </div>
+    <div class="dropdown" id="dropdownMenu">
+        <a href="../index.html">Home</a>
+        <a href="#" class="active">Heroes</a>
+        <a href="#">Trending</a>
+        <a href="#">Contact</a>
+    </div>
 </header>
 
 <!-- SEARCH -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+    <input type="text" placeholder="Search comics...">
 </div>
 
 
-<!-- INSPECTOR STEEL PAGE -->
+<!-- ========== HERO SECTION ========== -->
 <div class="hero-detail steel-bg">
 
-    <!-- Profile -->
     <div class="hero-profile">
         <img src="../images/heroes/inspector_steel.jpg" alt="Inspector Steel">
 
         <div class="hero-info">
             <h1>Inspector Steel</h1>
+
+            <!-- 20 words -->
             <p>
-                Inspector Steel is a cybernetic law enforcement hero from Raj Comics.
-                After a life-threatening accident, his body was rebuilt using advanced
-                mechanical technology, making him stronger, faster, and nearly
-                indestructible. He protects the city using intelligence, technology,
-                and powerful cybernetic abilities.
+                Cybernetic police hero with steel body, super strength, durability,
+                advanced sensors, weapons, intelligence, fighting crime and protecting city.
             </p>
         </div>
     </div>
 
-    <!-- Powers -->
-    <div class="powers">
-        <h2>Powers & Abilities</h2>
-        <ul>
-            <li>Superhuman strength and durability</li>
-            <li>Bulletproof metallic body</li>
-            <li>Advanced sensors and targeting system</li>
-            <li>Built-in combat weapons</li>
-            <li>High-speed data processing and analysis</li>
-        </ul>
-    </div>
+    <!-- Glowing Divider -->
+    <div class="glow-line"></div>
 
-    <!-- Comics -->
+
+    <!-- ========== COMICS LIST (PDF READY) ========== -->
     <div class="comics-section">
-        <h2>Popular Comics</h2>
+        <h2>Comics (PDF)</h2>
 
-        <div class="comics-grid">
+        <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/steel1.jpg">
-                <span>Steel Ka Badla</span>
-            </div>
+            <li>
+                <a href="../pdf/steel/steel_01.pdf" target="_blank">
+                    #001 Inspector Steel Origin
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/steel2.jpg">
-                <span>Cyber Crime</span>
-            </div>
+            <li>
+                <a href="../pdf/steel/steel_02.pdf" target="_blank">
+                    #002 Steel vs Crime Syndicate
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/steel3.jpg">
-                <span>Machine Hunter</span>
-            </div>
+            <li>
+                <a href="../pdf/steel/steel_03.pdf" target="_blank">
+                    #003 Cyber Attack
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/steel4.jpg">
-                <span>Steel vs Syndicate</span>
-            </div>
+            <li>
+                <a href="../pdf/steel/steel_04.pdf" target="_blank">
+                    #004 Machine Justice
+                </a>
+            </li>
 
-        </div>
+        </ol>
     </div>
 
 </div>
 
-<footer class="footer">
-    <div class="footer-container">
-        <p>© 2026 ComicLibrary</p>
-    </div>
-</footer>
 
-<script src="../js/inspector_steel.js"></script>
+<!-- ========== COPYRIGHT ONLY ========== -->
+<div class="copyright">
+    © 2026 ComicLibrary
+</div>
+
+<script src="../js/script.js"></script>
+
 </body>
-                </html>
+    </html>
