--- a/heroes/bankelal.html
+++ b/heroes/bankelal.html
@@ -5,109 +5,105 @@
     <title>Bankelal | ComicLibrary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main CSS -->
+    <!-- Global CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Bankelal Theme CSS -->
+    <!-- Bankelal Theme -->
     <link rel="stylesheet" href="../css/bankelal.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header class="header">
-  <div class="logo">ComicLibrary</div>
+    <div class="logo">ComicLibrary</div>
 
-  <div class="header-right">
-    <div class="search-icon">🔍</div>
+    <div class="header-right">
+        <div class="search-icon">🔍</div>
 
-    <div class="menu" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
+        <div class="menu" id="menuBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </div>
 
-  <div class="dropdown" id="dropdownMenu">
-    <a href="../index.html">Home</a>
-    <a href="#">Trending</a>
-    <a href="#">Categories</a>
-    <a href="#">Contact</a>
-  </div>
+    <div class="dropdown" id="dropdownMenu">
+        <a href="../index.html">Home</a>
+        <a href="#" class="active">Heroes</a>
+        <a href="#">Trending</a>
+        <a href="#">Contact</a>
+    </div>
 </header>
 
 <!-- SEARCH -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+    <input type="text" placeholder="Search comics...">
 </div>
 
 
-<!-- BANKELAL PAGE -->
+<!-- HERO SECTION -->
 <div class="hero-detail bankelal-bg">
 
-    <!-- Profile -->
     <div class="hero-profile">
         <img src="../images/heroes/bankelal.jpg" alt="Bankelal">
 
         <div class="hero-info">
             <h1>Bankelal</h1>
+
+            <!-- 20 words -->
             <p>
-                Bankelal is a humorous and clever character from Raj Comics.
-                Known for his selfish yet funny plans to become king, his
-                schemes always backfire and end up helping others. His stories
-                combine comedy, magic, and unexpected heroism.
+                Clever, selfish yet humorous schemer whose plans fail hilariously,
+                accidentally helping others, facing magical adventures, and comic situations always.
             </p>
         </div>
     </div>
 
-    <!-- Traits -->
-    <div class="powers">
-        <h2>Traits & Abilities</h2>
-        <ul>
-            <li>Extremely clever and manipulative</li>
-            <li>Master of funny schemes and tricks</li>
-            <li>Strong survival instincts</li>
-            <li>Unintentional heroism</li>
-            <li>Often connected with magical situations</li>
-        </ul>
-    </div>
+    <!-- Glowing Divider -->
+    <div class="glow-line"></div>
 
-    <!-- Comics -->
+
+    <!-- COMICS LIST (PDF READY) -->
     <div class="comics-section">
-        <h2>Popular Comics</h2>
+        <h2>Comics (PDF)</h2>
 
-        <div class="comics-grid">
+        <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/bankelal1.jpg">
-                <span>Bankelal Aur Jadui Talwar</span>
-            </div>
+            <li>
+                <a href="../pdf/bankelal/bankelal_01.pdf" target="_blank">
+                    #001 Bankelal Ki Yojana
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/bankelal2.jpg">
-                <span>Bankelal Bana Raja</span>
-            </div>
+            <li>
+                <a href="../pdf/bankelal/bankelal_02.pdf" target="_blank">
+                    #002 Bankelal Bana Raja
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/bankelal3.jpg">
-                <span>Bankelal Ka Chakravyuh</span>
-            </div>
+            <li>
+                <a href="../pdf/bankelal/bankelal_03.pdf" target="_blank">
+                    #003 Bankelal Ka Chakravyuh
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/bankelal4.jpg">
-                <span>Bankelal Ki Chaal</span>
-            </div>
+            <li>
+                <a href="../pdf/bankelal/bankelal_04.pdf" target="_blank">
+                    #004 Bankelal Ki Chaal
+                </a>
+            </li>
 
-        </div>
+        </ol>
     </div>
 
 </div>
 
-<footer class="footer">
-    <div class="footer-container">
-        <p>© 2026 ComicLibrary</p>
-    </div>
-</footer>
 
-<script src="../js/bankelal.js"></script>
+<!-- COPYRIGHT -->
+<div class="copyright">
+    © 2026 ComicLibrary
+</div>
+
+<script src="../js/script.js"></script>
+
 </body>
-  </html>
+    </html>
