--- a/heroes/anthony.html
+++ b/heroes/anthony.html
@@ -5,109 +5,105 @@
     <title>Anthony | ComicLibrary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main CSS -->
+    <!-- Global CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Anthony Theme CSS -->
+    <!-- Anthony Theme -->
     <link rel="stylesheet" href="../css/anthony.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header class="header">
-  <div class="logo">ComicLibrary</div>
+    <div class="logo">ComicLibrary</div>
 
-  <div class="header-right">
-    <div class="search-icon">🔍</div>
+    <div class="header-right">
+        <div class="search-icon">🔍</div>
 
-    <div class="menu" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
+        <div class="menu" id="menuBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </div>
 
-  <div class="dropdown" id="dropdownMenu">
-    <a href="../index.html">Home</a>
-    <a href="#">Trending</a>
-    <a href="#">Categories</a>
-    <a href="#">Contact</a>
-  </div>
+    <div class="dropdown" id="dropdownMenu">
+        <a href="../index.html">Home</a>
+        <a href="#" class="active">Heroes</a>
+        <a href="#">Trending</a>
+        <a href="#">Contact</a>
+    </div>
 </header>
 
 <!-- SEARCH -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+    <input type="text" placeholder="Search comics...">
 </div>
 
 
-<!-- ANTHONY PAGE -->
+<!-- HERO SECTION -->
 <div class="hero-detail anthony-bg">
 
-    <!-- Profile -->
     <div class="hero-profile">
         <img src="../images/heroes/anthony.jpg" alt="Anthony">
 
         <div class="hero-info">
             <h1>Anthony</h1>
+
+            <!-- 20 words -->
             <p>
-                Anthony Gonsalves is a unique mystical character from Raj Comics.
-                Known for his humorous personality and supernatural encounters,
-                Anthony often faces ghosts, dark forces, and mysterious threats
-                using courage, wit, and unexpected bravery.
+                Fearless humorous hero confronting ghosts, dark forces, supernatural threats,
+                using courage, wit, faith, and unexpected bravery in dangerous situations.
             </p>
         </div>
     </div>
 
-    <!-- Abilities -->
-    <div class="powers">
-        <h2>Abilities & Traits</h2>
-        <ul>
-            <li>Fearless against supernatural forces</li>
-            <li>Strong willpower and courage</li>
-            <li>Experience with ghosts and dark entities</li>
-            <li>Quick thinking in dangerous situations</li>
-            <li>Natural comic timing and humor</li>
-        </ul>
-    </div>
+    <!-- Glowing Divider -->
+    <div class="glow-line"></div>
 
-    <!-- Comics -->
+
+    <!-- COMICS (PDF READY) -->
     <div class="comics-section">
-        <h2>Popular Comics</h2>
+        <h2>Comics (PDF)</h2>
 
-        <div class="comics-grid">
+        <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/anthony1.jpg">
-                <span>Anthony Aur Dracula</span>
-            </div>
+            <li>
+                <a href="../pdf/anthony/anthony_01.pdf" target="_blank">
+                    #001 Anthony Aur Dracula
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/anthony2.jpg">
-                <span>Anthony Ki Aatma</span>
-            </div>
+            <li>
+                <a href="../pdf/anthony/anthony_02.pdf" target="_blank">
+                    #002 Anthony Ki Aatma
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/anthony3.jpg">
-                <span>Anthony Aur Pret</span>
-            </div>
+            <li>
+                <a href="../pdf/anthony/anthony_03.pdf" target="_blank">
+                    #003 Pret Ka Saya
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/anthony4.jpg">
-                <span>Anthony Ka Badla</span>
-            </div>
+            <li>
+                <a href="../pdf/anthony/anthony_04.pdf" target="_blank">
+                    #004 Anthony Ka Badla
+                </a>
+            </li>
 
-        </div>
+        </ol>
     </div>
 
 </div>
 
-<footer class="footer">
-    <div class="footer-container">
-        <p>© 2026 ComicLibrary</p>
-    </div>
-</footer>
 
-<script src="../js/anthony.js"></script>
+<!-- COPYRIGHT ONLY -->
+<div class="copyright">
+    © 2026 ComicLibrary
+</div>
+
+<script src="../js/script.js"></script>
+
 </body>
-  </html>
+            </html>
