--- a/heroes/dhruva.html
+++ b/heroes/dhruva.html
@@ -2,112 +2,108 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Super Commando Dhruva | ComicLibrary</title>
+    <title>Dhruva | ComicLibrary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main CSS -->
+    <!-- Global CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Page CSS -->
+    <!-- Dhruva Theme -->
     <link rel="stylesheet" href="../css/dhruva.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header class="header">
-  <div class="logo">ComicLibrary</div>
+    <div class="logo">ComicLibrary</div>
 
-  <div class="header-right">
-    <div class="search-icon">🔍</div>
+    <div class="header-right">
+        <div class="search-icon">🔍</div>
 
-    <div class="menu" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
+        <div class="menu" id="menuBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </div>
 
-  <div class="dropdown" id="dropdownMenu">
-    <a href="../index.html">Home</a>
-    <a href="#">Trending</a>
-    <a href="#">Categories</a>
-    <a href="#">Contact</a>
-  </div>
+    <div class="dropdown" id="dropdownMenu">
+        <a href="../index.html">Home</a>
+        <a href="#" class="active">Heroes</a>
+        <a href="#">Trending</a>
+        <a href="#">Contact</a>
+    </div>
 </header>
 
-<!-- SEARCH OVERLAY -->
+<!-- SEARCH -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+    <input type="text" placeholder="Search comics...">
 </div>
 
-<div class="hero-detail">
 
-    <!-- Profile -->
+<!-- HERO SECTION -->
+<div class="hero-detail dhruva-bg">
+
     <div class="hero-profile">
         <img src="../images/heroes/dhruva.jpg" alt="Dhruva">
 
         <div class="hero-info">
             <h1>Super Commando Dhruva</h1>
+
+            <!-- 20 words -->
             <p>
-                Dhruva is a highly skilled human superhero from Raj Comics.
-                He protects Rajnagar using intelligence, strategy, physical strength,
-                and his special ability to communicate with animals.
+                Intelligent human hero using strategy, martial arts, gadgets,
+                animal communication, peak agility, protecting Rajnagar from crime and danger.
             </p>
         </div>
     </div>
 
-    <!-- Powers -->
-    <div class="powers">
-        <h2>Abilities & Skills</h2>
-        <ul>
-            <li>Expert Martial Artist</li>
-            <li>Animal Communication</li>
-            <li>Peak Human Strength & Agility</li>
-            <li>Master Detective</li>
-            <li>Advanced Gadgets User</li>
-        </ul>
-    </div>
+    <!-- Glowing Divider -->
+    <div class="glow-line"></div>
 
-    <!-- Comics -->
+
+    <!-- COMICS (PDF READY) -->
     <div class="comics-section">
-        <h2>Popular Comics</h2>
+        <h2>Comics (PDF)</h2>
 
-        <div class="comics-grid">
+        <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/dhruva1.jpg">
-                <span>Pratishodh Ki Jwala</span>
-            </div>
+            <li>
+                <a href="../pdf/dhruva/dhruva_01.pdf" target="_blank">
+                    #001 Pratishodh Ki Jwala
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/dhruva2.jpg">
-                <span>Khooni Khandaan</span>
-            </div>
+            <li>
+                <a href="../pdf/dhruva/dhruva_02.pdf" target="_blank">
+                    #002 Khooni Khandaan
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/dhruva3.jpg">
-                <span>Chumba Ka Chakravyuh</span>
-            </div>
+            <li>
+                <a href="../pdf/dhruva/dhruva_03.pdf" target="_blank">
+                    #003 Chumba Ka Chakravyuh
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/dhruva4.jpg">
-                <span>Grand Master Robo</span>
-            </div>
+            <li>
+                <a href="../pdf/dhruva/dhruva_04.pdf" target="_blank">
+                    #004 Grand Master Robo
+                </a>
+            </li>
 
-        </div>
+        </ol>
     </div>
 
 </div>
 
-<!-- FOOTER -->
-<footer class="footer">
-    <div class="footer-container">
-        <p>© 2026 ComicLibrary</p>
-    </div>
-</footer>
 
-<!-- Page JS -->
-<script src="../js/dhruva.js"></script>
+<!-- COPYRIGHT ONLY -->
+<div class="copyright">
+    © 2026 ComicLibrary
+</div>
+
+<script src="../js/script.js"></script>
 
 </body>
     </html>
