--- a/heroes/bhokal.html
+++ b/heroes/bhokal.html
@@ -5,109 +5,105 @@
     <title>Bhokal | ComicLibrary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Main CSS -->
+    <!-- Global CSS -->
     <link rel="stylesheet" href="../css/style.css">
 
-    <!-- Bhokal Theme CSS -->
+    <!-- Bhokal Theme -->
     <link rel="stylesheet" href="../css/bhokal.css">
 </head>
 <body>
 
 <!-- HEADER -->
 <header class="header">
-  <div class="logo">ComicLibrary</div>
+    <div class="logo">ComicLibrary</div>
 
-  <div class="header-right">
-    <div class="search-icon">🔍</div>
+    <div class="header-right">
+        <div class="search-icon">🔍</div>
 
-    <div class="menu" id="menuBtn">
-      <span></span>
-      <span></span>
-      <span></span>
+        <div class="menu" id="menuBtn">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
-  </div>
 
-  <div class="dropdown" id="dropdownMenu">
-    <a href="../index.html">Home</a>
-    <a href="#">Trending</a>
-    <a href="#">Categories</a>
-    <a href="#">Contact</a>
-  </div>
+    <div class="dropdown" id="dropdownMenu">
+        <a href="../index.html">Home</a>
+        <a href="#" class="active">Heroes</a>
+        <a href="#">Trending</a>
+        <a href="#">Contact</a>
+    </div>
 </header>
 
 <!-- SEARCH -->
 <div class="search-overlay" id="searchOverlay">
-  <input type="text" placeholder="Search comics...">
+    <input type="text" placeholder="Search comics...">
 </div>
 
 
-<!-- BHOKAL PAGE -->
+<!-- HERO SECTION -->
 <div class="hero-detail bhokal-bg">
 
-    <!-- Profile -->
     <div class="hero-profile">
         <img src="../images/heroes/bhokal.jpg" alt="Bhokal">
 
         <div class="hero-info">
             <h1>Bhokal</h1>
+
+            <!-- 20 words -->
             <p>
-                Bhokal is a legendary warrior prince from the magical kingdom of
-                Parilok. Blessed with immense strength, divine weapons, and royal
-                courage, he fights dark forces, demons, and evil rulers to protect
-                justice and honor.
+                Powerful warrior prince wielding sword, super strength, combat mastery,
+                leadership, courage, protecting Parilok and Earth from demons and evil.
             </p>
         </div>
     </div>
 
-    <!-- Powers -->
-    <div class="powers">
-        <h2>Powers & Abilities</h2>
-        <ul>
-            <li>Superhuman strength and endurance</li>
-            <li>Master swordsman and warrior</li>
-            <li>Wields magical weapons</li>
-            <li>Royal leadership and battle strategy</li>
-            <li>Enhanced combat instincts</li>
-        </ul>
-    </div>
+    <!-- Glowing Divider -->
+    <div class="glow-line"></div>
 
-    <!-- Comics -->
+
+    <!-- COMICS (PDF READY) -->
     <div class="comics-section">
-        <h2>Popular Comics</h2>
+        <h2>Comics (PDF)</h2>
 
-        <div class="comics-grid">
+        <ol class="comics-list">
 
-            <div class="comic-card">
-                <img src="../images/comics/bhokal1.jpg">
-                <span>Bhokal Ki Talwar</span>
-            </div>
+            <li>
+                <a href="../pdf/bhokal/bhokal_01.pdf" target="_blank">
+                    #001 Bhokal Janm
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/bhokal2.jpg">
-                <span>Parilok Ka Yudh</span>
-            </div>
+            <li>
+                <a href="../pdf/bhokal/bhokal_02.pdf" target="_blank">
+                    #002 Parilok Ka Yudh
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/bhokal3.jpg">
-                <span>Mahaguru Bhokal</span>
-            </div>
+            <li>
+                <a href="../pdf/bhokal/bhokal_03.pdf" target="_blank">
+                    #003 Mahaguru Bhokal
+                </a>
+            </li>
 
-            <div class="comic-card">
-                <img src="../images/comics/bhokal4.jpg">
-                <span>Bhokal vs Rakshas</span>
-            </div>
+            <li>
+                <a href="../pdf/bhokal/bhokal_04.pdf" target="_blank">
+                    #004 Bhokal vs Rakshas
+                </a>
+            </li>
 
-        </div>
+        </ol>
     </div>
 
 </div>
 
-<footer class="footer">
-    <div class="footer-container">
-        <p>© 2026 ComicLibrary</p>
-    </div>
-</footer>
 
-<script src="../js/bhokal.js"></script>
+<!-- COPYRIGHT ONLY -->
+<div class="copyright">
+    © 2026 ComicLibrary
+</div>
+
+<script src="../js/script.js"></script>
+
 </body>
-      </html>
+                </html>
